--- a/ནང་ཆོས།.mw
+++ b/ནང་ཆོས།.mw
@@ -216,6 +216,14 @@
 <big>དེ་ལས་ རྒྱལ་སྲས་དོན་གྲུབ་མཆོག་གིས་ སྐུ་ཡོན་གྱི་ཐུགས་ཚ་གྱང་སྦོམ་བཞེས་ཏེ་ རྒྱལ་སྲས་རང་དང་མཉམ་པའི་ཨ་ལུ་ཆ་རོགས་ཁྲི་དང་ ལྷག་པར་དུ་ གཞན་དང་མ་འདྲ་བའི་རིག་པ་ཅན་གྱི་ཨ་ལུ་ཚུ་དང་གཅིག་ཁར་ འབྲི་ལྷག་གི་ཡོན་ཏན་དང་ ཡིག་གཟུགས་འབྲི་ཐངས། དེའི་ནང་ལས་ཡང་ ཁྱད་པར་དུ་ ཡི་གུ་གསེར་གྱིས་འབྲི་ཐངས་ཚུ་ལྷབ་པར་ སློབ་དཔོན་ཀུན་གྱི་བཤེས་གཉེན་ཟེར་མི་ཅིག་བཞུགས་སར་བྱོན་ནུག། དེའི་ཚེ་ སློབ་དཔོན་ཀུན་གྱི་བཤེས་གཉེན་གྱིས་ དཔེ་ཆ་ག་ཅི་སྟོནམ་ཅིག་ ཡིག་གཟུགས་མ་འདྲཝ་ལྔ་བརྒྱ་ལྷག་ཙམ་སྟོན་གནང་རུང་ རྒྱལ་སྲས་དོན་གྲུབ་ཀྱིས་ སློབ་དཔོན་ལུ་ འདི་ང་གིས་ཤེས། སྟོན་ནི་ཡོད་པ་ཅིན་ ང་གིས་མ་ཤེས་མི་ སོ་སོ་ཅིག་སྟོན་ཟེར་གསུངམ་ད་ སློབ་དཔོན་འདི་གིས་ འཇིག་རྟེན་འདི་ནང་ ཡོན་ཏན་འདི་བ་ལྷགཔ་གཞན་མེད། འདི་ཚུ་ ཁྱེད་ཀྱིས་ཤེས་པ་ཅིན་ མཁས་པ་ཨིན་མས་ཟེར་གསུངས་ཡོདཔ་ཨིན་མས།<br>
 དེ་མ་ཚད་ རྒྱལ་སྲས་དོན་ཀུན་གྲུབ་པ་གིས་ སློབ་དཔོན་ཀུན་གྱི་བཤེས་གཉེན་གྱིས་ཡང་ གོ་མ་མྱོངས་མི་ ལྷ་རིགས་ཀྱི་ཡི་གུ་ ཞལ་ལས་སྐྱོརཝ་ད་ སློབ་དཔོན་ཡང་ རྣམ་རྟོག་ལངས་ཏེ་ ཁ་ལས་དོན་ཀུན་གྲུབ་པ་ཁྱེད་ལས་མཁས་པ་གཞན་ཡོད་ག་ཟེར་ཐོན་ཡར་སོ་ནུག།<br>
 འདི་བཟུམ་མའི་མཁས་པ་གི་རྟགས་ སློབ་དཔོན་གཅིག་གི་གདོང་ཁར་སྟོན་པའི་གཏམ་དང་སྙན་གྲགས་འདི་ འཇིག་རྟེན་འདི་ནང་མ་ཚད་ ལྷ་དང་ཀླུའི་ཡུལ་ལུ་ཡང་ཁྱབ་སོ་ནུག། དེ་ལས་ རྒྱལ་སྲས་དོན་ཀུན་གྲུབ་པ་གིས་ ཕོ་དཔའ་རྩལ་དང་ལྡན་པའི་མཉམ་རོགས་ཚུ་དང་གཅིག་ཁར་ མདའ་གི་འགྲན་བསྡུར་དང་མཆོང་ནི། དཔལ་རྟགས་ཀྱི་རིག་རྩལ་ལ་སོགས་པའི་སྒྱུ་རྩལ་གྱི་འགྲན་བསྡུར་ག་ཅི་ནང་ཡང་ རྒྱལ་ཁ་འཐོབ་མི་རྒྱལ་སྲས་དོན་གྲུབ་པ་མ་གཏོགས་ གཞན་མེད་ནི་འདི་གིས་ རིག་རྩལ་ཅན་གྱི་དཔའ་བོ་ཅིག་སྦེ་ ཆ་བཞག་ཚུགས་པའི་རྒྱལ་པོའི་སྲས་ཅིག་ཨིན་པས།</big>
+=== རབ་ཏུ་བྱུང་བའི་མཛད་པ། ===
+<big>རྒ་ན་འཆི་དང་ཚངས་སྤྱོད་གཟིགས་སོགས་ཀྱིས། །ངེས་འབྱུང་རབ་ཏུ་བྱུང་ནས་ངུར་སྨྲིག་བཞེས།། ཟེར་གསུངས་མི་ལྟར་དུ་   དགུང་ལོ་ཉེར་དགུ་བཞེསཔ་ད་ གྲོང་ཁྱེར་གྱི་སྒོ་བཞི་ལས་  མི་རྒས་རྒསཔ་དང་ན་ནཝ། ཤི་ཤིཝ།  ཆོས་འབད་མི་ཚུ་གཟིགས་ཏེ་ ཕྱོགས་བཅུའི་རྒྱལ་བ་རྣམས་ཀྱིས་ གླུ་དབྱངས་སིལ་སྙན་གྱི་སྒྲ་གིས་བསྐུལ་ཏེ་བྱིན་གྱིས་བརླབས་ཡོདཔ་མ་ཚད་ རྒྱལ་སྲིད་བཙུན་མོའི་འཁོར་རྣམས་ལུ་ སྐྱོ་བའི་ཚུལ་སྟོན་ཏེ་ ངེས་པར་འབྱུང་བའི་ཐུགས་འཁྲུངས་ནུག།  དེ་ལས་ ཞག་བདུན་ལུ་ རབ་ཏུ་མ་བྱུངམ་བཟུམ་ཅིག་ཨིན་པ་ཅིན་ འཁོར་ལོ་བསྒྱུར་བའི་རྒྱལཔོ་ལུ་འགྱུར་འོང་ཟེར་བའི་ཡ་མཚན་ཅན་གྱི་ལུང་བསྟན་གསན་ནུག། <br>
+དེམ་ཅིག་གི་བར་ན་ རྒྱལ་སྲས་ཀྱི་ཐུགས་ལུ་ ཡར་གྱི་རྒྱལ་པོའི་ཆབ་སྲིད་དང་ མར་གྱི་མི་སེར་འཚོ་སྐྱོང་ ག་ཅི་ལུ་བལྟ་སྟེ་འབད་རུང་ འཇིག་རྟེན་འཁོར་བའི་ཆོས་འདི་ལུ་ སྙིང་པོ་རྩ་ལས་མེད་པའི་སྡུག་བསྔལ་གྱི་རང་བཞིན་ཨིན་མས། ད་ སྡུག་བསྔལ་འདི་ལས་ཐར་བའི་ཐབས་ཅིག་འཚོལ་དགོ་པས་མནོ་བའི་ཐུགས་བཞེད་གནང་ཞིནམ་ལས་ བྱོག་འགྱོ་ནི་གི་འཆར་གཞི་བརྩམས་ཏེ་བཞུགས་ནུག། 
+དེ་ལས་ ཐ་སྐར་ཟླ་བའི་ནམ་ཕྱེད་ལུ་ ཆིབས་པ་སྔགས་ལྡན་ལུ་ཆིབས་ཏེ་ ཕྱག་ཞུ་མི་འདུན་དང་བརྒྱ་བྱིན་ལ་སོགས་པའི་ལྷ་བྱེ་བ་ཕྲག་སྟོང་གིས་མཆོད་དེ་ གནམ་ཁའི་ལམ་ལས་ དཔག་ཚད་བཅུ་གཉིས་ཀྱི་ས་ཁར་ ཤར་ཕྱོགས་འདས་པ་ཡངས་པ་ཅན་ལུ་ཕེབས་ཏེ་ གཙུག་ཕུད་ཁོ་ར་གིས་བཅད་དེ་ ལྷ་ཚུ་གིས་ཕུལ་མི་ན་བཟའ་ངུར་སྨྲིག་འདི་བཞེས་ཞིནམ་ལས་ གནས་ཚུལ་དེ་ཚུ་ ཡབ་ཡུམ་དང་བཙུནམོ་ལུ་ ཞུ་དགོཔ་སྦེ་གསུངས་ཏེ་ ཆིབས་རྟ་དང་ཨ་དྲུང་ལོག་བཏང་ནུག།  དེ་ལས་ གཙུག་ཕུད་དང་ཀཱ་ཤི་ཀཱའི་ན་བཟའ་ཚུ་ ལྷ་ཚུ་གིས་བསྣམས་བྱོན་ཡོདཔ་ཨིན་མས།</big>
+=== རབ་ཏུ་བྱུང་བའི་མཛད་པ། ===
+<big>རྒ་ན་འཆི་དང་ཚངས་སྤྱོད་གཟིགས་སོགས་ཀྱིས། །ངེས་འབྱུང་རབ་ཏུ་བྱུང་ནས་ངུར་སྨྲིག་བཞེས།། ཟེར་གསུངས་མི་ལྟར་དུ་   དགུང་ལོ་ཉེར་དགུ་བཞེསཔ་ད་ གྲོང་ཁྱེར་གྱི་སྒོ་བཞི་ལས་  མི་རྒས་རྒསཔ་དང་ན་ནཝ། ཤི་ཤིཝ།  ཆོས་འབད་མི་ཚུ་གཟིགས་ཏེ་ ཕྱོགས་བཅུའི་རྒྱལ་བ་རྣམས་ཀྱིས་ གླུ་དབྱངས་སིལ་སྙན་གྱི་སྒྲ་གིས་བསྐུལ་ཏེ་བྱིན་གྱིས་བརླབས་ཡོདཔ་མ་ཚད་ རྒྱལ་སྲིད་བཙུན་མོའི་འཁོར་རྣམས་ལུ་ སྐྱོ་བའི་ཚུལ་སྟོན་ཏེ་ ངེས་པར་འབྱུང་བའི་ཐུགས་འཁྲུངས་ནུག།  དེ་ལས་ ཞག་བདུན་ལུ་ རབ་ཏུ་མ་བྱུངམ་བཟུམ་ཅིག་ཨིན་པ་ཅིན་ འཁོར་ལོ་བསྒྱུར་བའི་རྒྱལཔོ་ལུ་འགྱུར་འོང་ཟེར་བའི་ཡ་མཚན་ཅན་གྱི་ལུང་བསྟན་གསན་ནུག། <br>
+དེམ་ཅིག་གི་བར་ན་ རྒྱལ་སྲས་ཀྱི་ཐུགས་ལུ་ ཡར་གྱི་རྒྱལ་པོའི་ཆབ་སྲིད་དང་ མར་གྱི་མི་སེར་འཚོ་སྐྱོང་ ག་ཅི་ལུ་བལྟ་སྟེ་འབད་རུང་ འཇིག་རྟེན་འཁོར་བའི་ཆོས་འདི་ལུ་ སྙིང་པོ་རྩ་ལས་མེད་པའི་སྡུག་བསྔལ་གྱི་རང་བཞིན་ཨིན་མས། ད་ སྡུག་བསྔལ་འདི་ལས་ཐར་བའི་ཐབས་ཅིག་འཚོལ་དགོ་པས་མནོ་བའི་ཐུགས་བཞེད་གནང་ཞིནམ་ལས་ བྱོག་འགྱོ་ནི་གི་འཆར་གཞི་བརྩམས་ཏེ་བཞུགས་ནུག། <br>
+དེ་ལས་ ཐ་སྐར་ཟླ་བའི་ནམ་ཕྱེད་ལུ་ ཆིབས་པ་སྔགས་ལྡན་ལུ་ཆིབས་ཏེ་ ཕྱག་ཞུ་མི་འདུན་དང་བརྒྱ་བྱིན་ལ་སོགས་པའི་ལྷ་བྱེ་བ་ཕྲག་སྟོང་གིས་མཆོད་དེ་ གནམ་ཁའི་ལམ་ལས་ དཔག་ཚད་བཅུ་གཉིས་ཀྱི་ས་ཁར་ ཤར་ཕྱོགས་འདས་པ་ཡངས་པ་ཅན་ལུ་ཕེབས་ཏེ་ གཙུག་ཕུད་ཁོ་ར་གིས་བཅད་དེ་ ལྷ་ཚུ་གིས་ཕུལ་མི་ན་བཟའ་ངུར་སྨྲིག་འདི་བཞེས་ཞིནམ་ལས་ གནས་ཚུལ་དེ་ཚུ་ ཡབ་ཡུམ་དང་བཙུནམོ་ལུ་ ཞུ་དགོཔ་སྦེ་གསུངས་ཏེ་ ཆིབས་རྟ་དང་ཨ་དྲུང་ལོག་བཏང་ནུག།  དེ་ལས་ གཙུག་ཕུད་དང་ཀཱ་ཤི་ཀཱའི་ན་བཟའ་ཚུ་ ལྷ་ཚུ་གིས་བསྣམས་བྱོན་ཡོདཔ་ཨིན་མས།</big>
 === ཁུངས་གཏུག། ===
 # དྭགས་གས་པོ་ལྷ་རྗེ་བསོད་ནམས་རིན་ཆེན། དེབ་གཟུགས་པར་ཐེངས་དང་པ། སྤྱི་ལོ་ ༢༠༠༥ ལུ། 
 # དཔེ་དེབ་ཀྱི་མིང་། དམ་ཆོས་ཡིད་བཞིན་ནོར་བུ་ཐར་པ་རིན་པོ་ཆེའི་རྒྱན། 
