--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -4,5 +4,11 @@
 དར་དཀར་ན་རྫོང་ཁག་འདི་ བརྒྱ་ཆ་ ༨༩ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ལས་ རི་ནགས་ཀྱི་འཚོ་བ་དང་ལྡན་པའི་རྫོང་ཁག་ཅིག་ཨིནམ་དང་ འཚོ་བའི་ཐོན་ཤུགས་ཆེ་བའི་རྫོང་ཁག་ཅིག་ཨིན། དེ་མ་ཚད་ དུས་འགྱུར་གྱི་ཡར་རྒྱས་གོང་འཕེལ་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ སྨན་ཁང་གསུམ་དང་ གསོ་བའི་ལྟེ་བ་བདུན་ དེ་ལས་ སློབ་གྲྭ་ ༢༥ དང་ ཨ་ལོ་གཅེས་སྐྱོང་ལྟེ་བ་གསུམ་ཡོདཔ་ཨིན། དེ་ལས་ མཐུན་རྐྱེན་ གཞན་ཡང་ གློག་མེ་སྣུམ་འཁོར་འགྲུལ་ལམ་ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ཚུ་ཡོདཔ་ཨིན། གཞན་ཡང་མི་སྡེ་དཔལ་འབྱོར་གོང་འཕེལ་གྱི་དོན་ལུ་ བཟོ་གྲྭ་དང་ཚོང་འབྲེལ་གྱི་ལས་སྡེ་བསྡོམས་ ༦༤༨ དེ་ཅིག་ཡོདཔ་དང་ དར་དཀར་ན་རྫོང་ཁག་གི་མི་མང་ཤོས་ར་ སོ་ནམ་གྱི་ལཱ་ལུ་འཚོ་བ་སྐྱོང་དོ་ཡོདཔ་ལས་ སོ་ནམ་གྱི་ཐོན་ཤུགས་ཡང་ལེགས་ཤོམ་ཡོདཔ་ཨིན། འདི་གི་ཐོག་ཁར་ རྫོང་ཁག་འདི་ནང་ རྒྱལ་རབས་དང་ལྡན་པའི་རྫོང་གཞིས་དང་ལྷ་ཁང་ དེ་ལས་ རྩ་ཅན་གྱི་གནས་ཚུ་ལེ་ཤ་ར་ཡོདཔ་ཨིན། <br>
 རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ ཡུན་བརྟན་གྱི་འཚོ་བ་དང་སྔར་ཁྱུན་བཟང་པོའི་ལམ་ལུགས་སྲོལ་ དེ་ལས་ རང་བཞིན་སྲུང་སྐྱོབས་དང་ དཔལ་འབྱོར་གོང་འཕེལ་ཚུ་དང་ལྡན་པའི་ རྫོང་ཁག་ཅིག་འབད་ནི་ཨིནམ་དང་། དམིགས་སྐྱེད་འདི་ཡང་ མི་དམངས་ལུ་ཞབས་ཏོག་ཚུ་ གང་ མགྱོགས་སྦེ་ ཕན་ནུས་དང་ཁྱད་རིག་དང་ལྡན་པའི་སྒོ་ལས་བྱིན་ནི་དང་ མི་སྡེ་དཔལ་འབྱོར་ཡུན་བརྟན་དང་གོང་འཕེལ་གྱི་དོན་ལུ་ ཁྱད་རིག་ལྡན་ པའི་ མི་སྡེ་གནས་སྟངས་བཟོ་ནི་ དེ་ལས་ རང་བཞིན་གྱི་ཐོན་དངོས་ཚུ་ ཡུན་བརྟན་དང་འགན་ཁུར་ཅན་སྦེ་ལག་ལེན་འཐབ་ནི་འདི་ཨིན།<br>
 ད་རེས་ རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་ རྫོང་རབ་དང་དྲུང་པ་ དེ་ལས་ ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་ དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ ཞུ་བཞིན་ཡོདཔ་ཨིན།</big> 
+=== ལྷུན་རྩེ་རྫོང་ཁག། ===
+<big>༉ ལྷུན་རྩེ་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ཤར་ཕྱོགས་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ཡང་ ཤར་ཁ་ཐུག་ལས་བཀྲིས་གཡང་རྩེ་དང་ ནུབ་ཁ་ཐུག་ལས་བུམ་ཐང་ དེ་ལས་ ལྷོ་ཁ་ཐུག་ལས་མོང་སྒར་དང་ བྱང་ཁ་ཐུག་ལས་རྒྱ་ནག་གི་སྦུག་ལུ་ཆགས་ཏེ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ གི་ས་ཁྱོན་འདི་ཡང་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༡༨༥༣.༥༥ཡོདཔ་ཨིན། ལྷུན་རྩེ་རྫོང་ཁག་ནང་ གང་ཟུར་ རྒྱ་རས་ མཁོ་མ་ སྐུར་སྟོད་ སྨད་མཚོ་ སྨན་སྦིས་ སྨིན་སྦྱིས་ བཙན་མཁར་བཅས་ རྒེད་འོག་བརྒྱད་ཡོདཔ་དང་ འདི་ནང་ཁྱིམ་གུང་པ་ ༥༣༤༣ ཡོད། ལྷུན་རྩེ་རྫོང་ཁག་གི་མི་མང་ཤོས་ཀྱིས་  སྐུར་སྟོད་པའི་ཁ་སྐད་སླབ་དོ་ཡོདཔ་དང་ ཡོངས་གྲགས་ལུ་རྫོང་ཁག་གཞན་གྱི་མི་ཚུ་གིས་ ལྷུན་རྩེ་གི་མི་ཚུ་ལུ་སྐུར་སྟོདཔ་ཟེར་སླབ་ཨིན། ལྷུན་རྩེ་རྫོང་ཁག་འདི་ ང་བཅས་རའི་འབྲུག་རྒྱལ་ཁབ་ཀྱི་བརྒྱུད་འཛིན་གྱི་རྒྱལ་པོ་ཚུ་བརྒྱུད་སའི་རྫོང་ཁག་ཨིནམ་ལས་ རྫོང་ཁག་འདི་རྒྱལ་རབས་ཅན་གྱི་ས་གནས་ཅིག་ཨིན། དེ་ཡང་ སྤྱི་ལོ་ ༡༨༢༥ ལུ་ མི་རྗེ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ ལྷུན་རྩེ་དུང་དཀར་ཆོས་རྗེ་གི་ གདུང་རྒྱུད་ལུ་སྐུ་འཁྲུངས་ཏེ་ འབྲུག་པའི་རྒྱལ་བརྒྱུད་རིམ་པར་བྱོན་ཏེ་ཡོདཔ་ཨིན། ད་རེས་ རྫོང་ཁག་འདི་ནང་ མི་རློབས་བསྡོམས་གྱིས་ ༡༤,༤༣༧ ཡོདཔ་ཨིན།<br>
+ལྷུན་རྩེ་རྫོང་ཁག་འདི་ བརྒྱ་ཆ་ ༧༤ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་དང་ འདི་ནང་ དུས་རབས་བརྒྱད་པའི་ནང་བྱོན་མི་ ཨྱོན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་གིས་ བྱིན་གྱིས་རླབས་གནང་བའི་ས་གནས་བྱིན་ཅན་ཚུ་ཡོད། བྱིན་ཅན་གྱི་ས་གནས་ཚུ་ཡང་ ལྷུན་རྩེ་སེངྒེ་རྫོང་ རིན་ཆེན་བུམ་པ་ བྱང་ཆུབ་ལྷ་ཁང་དང་ འདས་པའི་ལོ་ ༢༠༡༣ ལུ་བཞེངས་ཡོད་པའི་ སྟག་སྐད་ལ་གུ་རུ་ལྷ་ཁང་ཚུ་ཨིན། ད་རེས་ བྱིན་ཅན་གྱི་ས་གནས་འདི་ཚུ་ མཇལ་བར་ རྒྱལ་ཁབ་ཕྱི་ནང་གི་མི་ལེ་ཤ་འོང་དོ་ཡོདཔ་ལས་ འདི་གིས་གནས་སྐོརཔ་ཚུ་ལུ་ ཚོགས་བསགས་སྒྲིབ་འབྱང་ལུ་ཕན་ཐོགས་ དོ་ཡོདཔ་དང་ རྒྱལ་ཁབ་ལུ་བལྟ་བཤལ་ལས་བརྟེན་པའི་ འོང་འབབ་བཟོ་ནི་ལུ་ཕན་ཐོགས་དོ་ཡོདཔ་ཨིན། འདི་མ་ཚད་ ལྷུན་རྩེ་རྫོང་ཁག་འདི་ རྒྱལ་ཁབ་ནང་ཡོངས་གྲགས་ཡོད་པའི་ སྐུད་ཤུད་ཐགས་ར་འབྱུང་ས་ཡང་ཨིན། འདི་ལུ་བརྟེན་ རྫོང་ཁག་འདི་ནང་གི་མི་ཚུ་དང་ ཐད་ཀར་དུ་ ལྷུན་རྩེ་མཁོ་མ་གི་མི་ཚུ་ སྐུད་ཤུད་ཐགས་ར་དང་འབྲེལ་བའི་ཐགས་འཐག་ནི་ལུ་གཙོ་བོ་བཏོན་ཏེ་ འཚོ་བ་སྐྱོང་དོ་ཡོདཔ་ཨིན། འདི་མ་ཚད་ འདི་བཟུམ་མའི་ཐགས་འཐག་ནི་འདི རང་ལུགས་ཀྱི་སྲོལ་ཡང་ཨིནམ་ལས་ སྔར་སྲོལ་སྲུང་སྐྱོབས་ལུ་ཡང་ཕན་ཐོགས་དོ་ཡོདཔ་ཨིན། <br>
+འདི་བཟུམ་སྦེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ སྨན་ཁང་གཅིག་དང་གསོ་བའི་ལྟེ་བ་ དེ་ལས་ སློབ་གྲྭ་ ༡༧ ཡོདཔ་དང་ དེ་ལས་ མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་ སྣུམ་འཁོར་འགྲུལ་ལམ་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ཚུ་ཡོདཔ་ཨིན། གཞན་ཡང་ མི་སྡེ་དཔལ་འབྱོར་གོང་འཕེལ་དང་ འཚོ་བ་སྐྱོང་ཐབས་ལུ་ སོ་ནམ་དང་འབྲེལ་བའི་ལཱ་ཚུ་འབད་དོ་ཡོདཔ་ལས་ སོ་ནམ་གྱི་ཐོན་ཤུགས་ལེགས་ཤོམ་ཡོདཔ་ཨིན། <br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ རྫོང་ཁག་འདི་གཞུང་སྐྱོང་ལེགས་ལྡན་གྱི་ལམ་བཟང་དང་ལྡན་ཏེ་ རང་ལུགས་ལམ་སྲོལ་མ་ཉམས་པ་དང་ མི་སྡེ་མཐུན་སྒྲིག་ཆེ་བ་ དེ་ལས་ རང་དགོ་རང་ལངས་ཀྱི་དཔལ་འབྱོར་དང་ མཐའ་འཁོར་གནས་སྟངས་སྒྲིང་སྒྲིང་དང་ལྡན་པའི་རྫོང་ཁག་ཅིག་སྦེ་ གནས་ནི་འདི་ཨིནམ་དང་། དམིགས་སྐྱེད་འདི་ཡང་ རྫོང་ཁག་འདི་ རང་མགོ་རང་འདྲོང་སྦེ་གནས་ཐབས་ལུ་ ལེགས་བཟང་གི་ཞབས་ཏོག་ཚུ་ ཐོགས་པ་མེད་པར་མཁོ་སྤྲོད་འབད་དེ་གོང་འཕེལ་གཏང་ཐབས་ལུ་ ཅི་ལྕོགས་གང་ལྕོགས་ཀྱི་སྒོ་ལས་ཕྱག་ཕྱིད་ཞུ་ནི་གི་ བརྩོན་ཤུགས་བསྐྱེད་ནི་འདི་ཨིན།ད་རེས་རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་ རྫོང་རབ་དང་ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big>
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
+# Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
