--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -9,6 +9,60 @@
 ལྷུན་རྩེ་རྫོང་ཁག་འདི་ བརྒྱ་ཆ་ ༧༤ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་དང་ འདི་ནང་ དུས་རབས་བརྒྱད་པའི་ནང་བྱོན་མི་ ཨྱོན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་གིས་ བྱིན་གྱིས་རླབས་གནང་བའི་ས་གནས་བྱིན་ཅན་ཚུ་ཡོད། བྱིན་ཅན་གྱི་ས་གནས་ཚུ་ཡང་ ལྷུན་རྩེ་སེངྒེ་རྫོང་ རིན་ཆེན་བུམ་པ་ བྱང་ཆུབ་ལྷ་ཁང་དང་ འདས་པའི་ལོ་ ༢༠༡༣ ལུ་བཞེངས་ཡོད་པའི་ སྟག་སྐད་ལ་གུ་རུ་ལྷ་ཁང་ཚུ་ཨིན། ད་རེས་ བྱིན་ཅན་གྱི་ས་གནས་འདི་ཚུ་ མཇལ་བར་ རྒྱལ་ཁབ་ཕྱི་ནང་གི་མི་ལེ་ཤ་འོང་དོ་ཡོདཔ་ལས་ འདི་གིས་གནས་སྐོརཔ་ཚུ་ལུ་ ཚོགས་བསགས་སྒྲིབ་འབྱང་ལུ་ཕན་ཐོགས་ དོ་ཡོདཔ་དང་ རྒྱལ་ཁབ་ལུ་བལྟ་བཤལ་ལས་བརྟེན་པའི་ འོང་འབབ་བཟོ་ནི་ལུ་ཕན་ཐོགས་དོ་ཡོདཔ་ཨིན། འདི་མ་ཚད་ ལྷུན་རྩེ་རྫོང་ཁག་འདི་ རྒྱལ་ཁབ་ནང་ཡོངས་གྲགས་ཡོད་པའི་ སྐུད་ཤུད་ཐགས་ར་འབྱུང་ས་ཡང་ཨིན། འདི་ལུ་བརྟེན་ རྫོང་ཁག་འདི་ནང་གི་མི་ཚུ་དང་ ཐད་ཀར་དུ་ ལྷུན་རྩེ་མཁོ་མ་གི་མི་ཚུ་ སྐུད་ཤུད་ཐགས་ར་དང་འབྲེལ་བའི་ཐགས་འཐག་ནི་ལུ་གཙོ་བོ་བཏོན་ཏེ་ འཚོ་བ་སྐྱོང་དོ་ཡོདཔ་ཨིན། འདི་མ་ཚད་ འདི་བཟུམ་མའི་ཐགས་འཐག་ནི་འདི རང་ལུགས་ཀྱི་སྲོལ་ཡང་ཨིནམ་ལས་ སྔར་སྲོལ་སྲུང་སྐྱོབས་ལུ་ཡང་ཕན་ཐོགས་དོ་ཡོདཔ་ཨིན། <br>
 འདི་བཟུམ་སྦེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ སྨན་ཁང་གཅིག་དང་གསོ་བའི་ལྟེ་བ་ དེ་ལས་ སློབ་གྲྭ་ ༡༧ ཡོདཔ་དང་ དེ་ལས་ མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་ སྣུམ་འཁོར་འགྲུལ་ལམ་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ཚུ་ཡོདཔ་ཨིན། གཞན་ཡང་ མི་སྡེ་དཔལ་འབྱོར་གོང་འཕེལ་དང་ འཚོ་བ་སྐྱོང་ཐབས་ལུ་ སོ་ནམ་དང་འབྲེལ་བའི་ལཱ་ཚུ་འབད་དོ་ཡོདཔ་ལས་ སོ་ནམ་གྱི་ཐོན་ཤུགས་ལེགས་ཤོམ་ཡོདཔ་ཨིན། <br>
 རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ རྫོང་ཁག་འདི་གཞུང་སྐྱོང་ལེགས་ལྡན་གྱི་ལམ་བཟང་དང་ལྡན་ཏེ་ རང་ལུགས་ལམ་སྲོལ་མ་ཉམས་པ་དང་ མི་སྡེ་མཐུན་སྒྲིག་ཆེ་བ་ དེ་ལས་ རང་དགོ་རང་ལངས་ཀྱི་དཔལ་འབྱོར་དང་ མཐའ་འཁོར་གནས་སྟངས་སྒྲིང་སྒྲིང་དང་ལྡན་པའི་རྫོང་ཁག་ཅིག་སྦེ་ གནས་ནི་འདི་ཨིནམ་དང་། དམིགས་སྐྱེད་འདི་ཡང་ རྫོང་ཁག་འདི་ རང་མགོ་རང་འདྲོང་སྦེ་གནས་ཐབས་ལུ་ ལེགས་བཟང་གི་ཞབས་ཏོག་ཚུ་ ཐོགས་པ་མེད་པར་མཁོ་སྤྲོད་འབད་དེ་གོང་འཕེལ་གཏང་ཐབས་ལུ་ ཅི་ལྕོགས་གང་ལྕོགས་ཀྱི་སྒོ་ལས་ཕྱག་ཕྱིད་ཞུ་ནི་གི་ བརྩོན་ཤུགས་བསྐྱེད་ནི་འདི་ཨིན།ད་རེས་རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་ རྫོང་རབ་དང་ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big>
+=== མོང་སྒར་རྫོང་ཁག། ===
+<big>༉ མོང་སྒར་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ཤར་ཕྱོགས་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ཡང་ རྒྱལ་ས་ལྟེ་བ་ཐིམ་ཕུག་ལས་ཤར་ཁ་ཐུག་ ཀི་ལོ་མི་ཊར་ ༤༥༠ དང་ རྒྱ་མཚོ་ལས་མི་ཊར་ ༤༠༠༠ གི་ས་ཁར་ ས་ཁྱོན་གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༡༩༤༠.༢༦སྦེ་ཆགས་ཏེ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་མིང་ལུ་ ཧེ་མ་གཞོང་དཀར་ཟེར་སླབ་དོ་ཡོདཔ་དང་དེ་ཡང་བཤད་རྒྱུན་ལས་ ད་ལྟོ་ཡོད་པའི་མོང་སྒར་གྱི་ས་གནས་འདི་ དཀར་པོ་གདུང་ཟེར་མི་རྒྱལ་པོ་གི་མངའ་འོག་ལུ་སྡོད་པའི་སྐབས་ རྒྱལ་པོ་འདི་གིས་ སྤ་རོ་ལས་ཨིན་མི་སྤྲུལ་པའི་བཟོ་བོ་བ་ལེ་ ས་གནས་འདི་ཁར་རྫོང་གཞིས་ཅིག་བཞེངས་པར་འབོ་སྟེ་ རྫོང་ཆགས་ནིའི་དོན་ལུ་ས་གནས་ལེགས་ཤོམ་ཅིག་འཚོལ་བཅུག་བའི་སྐབས་ རྫོང་ཁག་འདི་གི་ས་ གནས་སྐུ་རི་ཆུ་གི་ལྟག་ལུ་ རྡོ་དཀརཔོ་དབྱིབས་གཞོང་བཟུམ་ཅིག་ཡོདཔ་མཐོང་སྟེ་ ས་གནས་འདི་གི་མིང་ཡང་ གཞོང་དཀར་ཟེར་བཏགས་ ཡོདཔ་དང་ རྫོང་ཡང་འདི་ཁ་ར་བཞེངས་གནང་ནུག། འདི་ལས་ཚུར་ ས་གནས་ཀྱི་མིང་ལུ་གཞོང་དཀར་དང་ རྫོང་གཞིས་འདི་ལུ་གཞོང་དཀར་རྫོང་ ཟེར་སླབ་སྲོལ་དར་ཡོད་རུང་ ཤུལ་ལས་སྒྲ་ཉམས་ཏེ་གཞོང་སྒར་དང་ འདི་ལས་ཡང་ མོང་སྒར་ཟེར་སླབ་སྲོལ་དར་ཁྱབ་བྱུང་ནུག། <br>
+མོང་སྒར་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་སྦོམ་ཤོས་ཅིག་ཨིནམ་དང་ འདི་ནང་ལུ་ དྲུང་ཁག་གཅིག་དང་རྒེད་འོག་བཅུ་བདུན་ ཡོདཔ་ལས་ འབྲུག་རྒྱལ་ཁབ་ནང་རྒེད་འོག་མཐོ་ཤོས་ཡོད་པའི་རྫོང་ཁག་ཨིན། མོང་སྒར་རྫོང་ཁག་ནང་ ད་རེས་ མི་རློབས་བསྡོམས་གྱིས་ ༤༡,༨༥༢ ཡོདཔ་དང་མི་མང་ཤོས་ར་འཚོ་བ་སོ་ནམ་གྱི་ལཱ་ལུ་ གཙོ་བོ་བཏོན་ཏེ་སྡོད་དོ་ཡོདཔ་ཨིན། དེ་ལས་ རྫོང་ཁག་འདི་ གུ་རུ་རིན་པོ་ཆེ་དང་གཏེར་སྟོན་པདྨ་གླིང་པ་ཞབས་དྲུང་ཐུགསསྤྲུལ་དང་ཨ་ནེ་མཆོད་རྟེན་བཟང་མོ་ དེ་ལས་གཞན་ཡང་ པད་གླིང་གདུང་བརྒྱུད་ལ་སོགས་པའི་ སྐྱེས་བུ་དམ་པ་མང་རབས་ཅིག་བྱོན་པའི་ས་གནས་ཅིག་འབདཝ་ལས་ ཨ་བརྒྱ་གནས་དང་དགྲ་མེད་རྩེ་ཨྱོན་རྣམ་གྲོལ་ཆོས་གླིང་དགོན་པ་ དེ་ལས་ མོང་སྒར་ཝེང་མཁར་དང་གཡག་སྒང་ལྷ་ཁང་ལ་སོགས་པའི་ བྱིན་ཅན་གྱི་གནས་དང་རྫོང་གཞིས་ལྷ་ཁང་ཚུ་ཡོདཔ་ཨིན། འདི་ལས་ཡང་ འཛམ་གླིང་གི་གནས་ཚད་ནང་ཡོངས་གྲགས་ཡོད་པའི་ དགྲ་མེད་རྩེ་རྔ་འཆམ་འབྱུང་སའི་རྫོང་ཁག་འབདཝ་ལས་ རང་ལུགས་ཀྱི་ཁྱད་ཆོས་ཐུན་མོང་མ་ཡིན་པ་འདི་ལུ་ རྫོང་ཁག་མི་ཚུ་གིས་དཔའ་ཉམས་ཀྱི་ཐོག་ལས་ བརྩི་བཀུར་དང་དག་སྣང་བསྐྱེད་དེ་ མི་ཉམས་གོང་འཕེལ་ གཏང་དོ་ཡོདཔ་ཨིན། <br>
+འདི་བཟུམ་སྦེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ ལུང་ཕྱོགས་གཙོ་བསྟེན་སྨན་ཁང་གཅིག་དང་གཞན་གསོ་བའི་ལྟེ་བ་ཚུ་ དེ་ལས་ གློག་རིག་གི་ཡོན་ཏན་སྦྱང་སའི་ མཐོ་རིམ་སློབ་གྲྭ་གཅིག་དང་ ཕྱི་ནང་གི་ཡོན་ཏན་སྦྱང་སའི་སློབ་གྲྭ་ ༥༤ ཡོདཔ་ཨིན། འདི་མ་ཚད་ ནང་པའི་ཤེས་ཡོན་སྦྱང་སའི་ བཤད་གྲྭ་དང་གྲྭ་ཚང་ཚུ་དང་ མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་དང་སྣུམ་འཁོར་འགྲུལ་ལམ་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་ཞབས་ཏོག་ དེ་ལས་ སོ་ནམ་གྱི་ཞབས་ཏོག་ཚུ་ཡོདཔ་ཨིན། གཞན་ཡང་ རྫོང་ཁག་འདི་གི་མི་སེར་མང་ཤོས་ འཚོ་བ་སོ་ནམ་ལུ་ བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་ལས་ འབྲུ་སྣ་དགུའི་རིགས་དང་ཚོད་བསྲེ་གི་རིགས་ དེ་ལས་ ཤིང་འབྲས་ཀྱི་རིགས་ག་ར་ལེགས་ཤོམ་སྦེ་འཚོ་དོ་ཡོདཔ་ ལས་ འདི་ཚུ་ལས་བརྟེན་པའི་འོང་འབབ་འབོར་ཆེ་ཏོག་ཏོ་བཟོ་ཚུགས་དོ་ཡོདཔ་ཨིན། འདི་གི་ཐོག་ཁར་ རྫོང་ཁག་འདི་ནང་འབབ་ཆུ་ལེགས་ཤོམ་ ཡོད་ནི་འདི་གིས་ མོང་སྒར་སྐུ་རི་ཆུ་ལུ་ མེ་ག་ཝཊ་ ༦༠ འབད་མི་གློག་མེ་ལས་འཛིན་ཅིག་ཡོདཔ་ལས་ རྒྱལ་ཁབ་ཀྱི་དཔལ་འབྱོར་གོང་འཕེལ་དོན་ལུ་ གློག་མེ་ལས་བརྟེན་པའི་འོང་འབབ་བཟོ་ཚུགས་དོ་ཡོདཔ་ཨིན། <br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ སྔར་སྲོལ་དང་རང་བཞིན་གནས་སྟངས་མ་ཉམས་པར་ མི་སེར་གྱི་རྒྱུད་ལུ་ཤེས་ཡོན་ལྡན་པའི་ཁར་ དཔལ་ འབྱོར་ཐོག་ལས་ དགའ་བ་སྐྱིད་པའི་ངང་ལུ་གནས་ནི་འདི་ཨིནམ་དང་། དམིགས་སྐྱེད་འདི་ཡང་ རྫོང་ཁག་གི་མི་སེར་ཚུའི་མཐའ་དོན་ལུ་ དཔལ་འབྱོར་གྱི་ལས་སྣ་མ་འདྲཝ་ཚུ་ལུ་ ཕན་རླབས་ཆེ་བའི་གནས་སྟངས་བྱིན་ནི་འདི་ཨིན། ད་རེས་ རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་རྫོང་རབ་དང་དྲུང་པ་ དེ་ལས་ ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big>
+=== བསམ་རྩེ་རྫོང་ཁག། ===
+<big>༉ བསམ་རྩེ་རྫོང་ཁག་འདི་ ཤར་ལས་ཆུ་ཁ་རྫོང་ཁག་དང་བྱང་ལས་ཧཱ་རྫོང་ཁག་ ལྷོ་ནུབ་ལས་ཝེསཊ་བེག་གཱལ་དང་སི་ཀིམ་གྱི་སྦུག་ན་ རྒྱ་མཚོ་ལས་ མི་ཊར་ ༦༠༠ དང་ ༨༠༠ གི་ས་ཁར་ཆགས་ཡོད་པའི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ལྷོ་ཕྱོགས་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་དང་པའི་སྐབས་ལུ་ གོང་གཟིམ་བསོད་ནམས་སྟོབས་རྒྱས་ཀྱིས་དབང་བའི་ཤར་ཕྱོགས་དང་ དེ་ཝཱན་དང་ཀར་ཛི་ཨྱོན་རྡོ་རྗེ་གིས་དབང་བའི་ནུབ་ཕྱོགས་སྦེ་ ཕྱོགས་གཉིས་ལུ་དབྱེ་སྟེ་སྡོད་ནུག། ཨིན་རུང་ཤུལ་ལས་ སྤྱི་ལོ་ཉིས་སྟོང་བདུན་བཅུ་བདུན་གྲངས་ལུ་ ཤར་ནུབ་སྦེ་དབྱེ་སྟེ་ཡོད་པའི་བསམ་རྩེ་གི་ས་གནས་འདི་ གཞུང་སྒེར་གྱི་ཕྱག་ལཱ་གནང་སའི་རྫོང་ཁག་ཅིག་སྦེ་གཞི་བཙུགས་འབད་ནུག། ད་རེས་ རྫོང་ཁག་འདི་ནང་ རྡོ་རོ་ཁག་དྲུང་དང་བཀྲིས་ཆོས་གླིང་དྲུང་ཁག་བཅས་དྲུང་ཁག་གཉིས་དང་ བདུན་ཆུ་ཁ་ རྡོ་ཕུག་ཅན་ གདུམ་གཏོད་ བསམ་རྩེ་ ནོར་རྒྱས་སྒང་ པདྨ་གླིང་ བསྟན་འབྲུག་ ནོར་རྒྱས་ཆོས་གླིང་ བཀྲིས་ཆོས་གླིང་ ཨྱོན་རྩེ་ འོད་གསལ་རྩེ་ གསང་སྔགས་ཆོས་གླིང་ རྟ་ལྡིང་ ཕུན་ཚོགས་དཔལ་རི་བཅས་ རྒེད་འོག་བཅོ་ལྔ་ཡོདཔ་ཨིན། <br>
+གོང་གི་ས་གནས་ཚུ་བསྡོམས་ཏེ་ རྫོང་ཁག་འདི་གི་ས་ཁྱོན་གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༡༣༠༩.༡ ཡོདཔ་དང་ འདི་ནང་ ལྷོ་མཚམས་པ་དང་ཨ་དི་བ་ཤི་ དྲོ་ཡབ་མཅས་ མི་རིགས་མ་འདྲཝ་གསུམ་གྱིས་གཞིས་ཆགས་ཏེ་ཡོདཔ་ཨིན། བསམ་རྩེ་རྫོང་ཁག་ནང་ ད་རེས་མི་རློབས་༥༣༩༦ ཡོདཔ་དང་ མི་སེར་མང་ཤོས་འཚོ་བ་སོ་ནམ་གྱི་ལཱ་ལུ་ གཙོ་བོ་བཏོན་ཏེ་སྡོད་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ ཚ་དྲོད་དང་ལྡན་པའི་ས་གནས་ ཅིག་འབདཝ་ལས་ ཚལ་ལུ་དང་ཨེ་ལཱན་ཅི་ དེ་ལས་ རྡོག་མ་དང་མོ་དུ་ཕ་ལ་ལ་སོགས་པའི་ ཤིང་འབྲས་ཚུ་གི་ཐོན་ཤུགས་སྦོམ་ཡོདཔ་ལས་ ནང་འཁོད་ལས་ཐོན་པའི་ཤིང་འབྲས་འདི་ཚུ་ རྒྱ་གར་དང་བང་ལ་དེཤ་གི་རྒྱལ་ཁབ་ཚུ་ནང་ཕྱིར་བཙོང་འབད་དེ་ དངུལ་འབྲེལ་གྱི་འོང་འབབ་རྒྱ་ཆེཝ་སྦེ་བཟོ་དོ་ཡོདཔ་དང་ རྒྱལ་ཁབ་ཀྱི་དཔལ་འབྱོར་ལུ་ཡང་ ལྷན་ཐབས་སྦོམ་འབད་དོ་ཡོདཔ་ཨིན། གཞན་ཡང་ རྫོང་ཁག་གི་ས་གནས་ཚུ་ནང་ སྡོད་མི་ཚུ་གིས་ སྒོ་ནོར་གསོ་སྐྱོང་གི་ལཱ་ཚུ་ཡང་འབད་དོ་ཡོདཔ་ལས་ སྒོ་ནོར་ལས་ཐོན་པའི་ཐོན་ཁུངས་མར་དང་དར་ཚུལ་ཚུ་ རྫོང་ཁག་གཞན་ཚུ་ ནང་ཚོང་འབྲེལ་འབད་དོ་ཡོདཔ་ཨིན། <br>
+རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ གསོ་བའི་ཞབས་ཏོག་གནང་སའི་ སྨན་ཁང་གཅིག་དང་གསོ་བའི་ལྟེ་བ་ཚུ་ དེ་ལས་ སློབ་དཔོན་སྦྱོང་བརྡར་འབད་སའི་མཐོ་རིམ་སློབ་གྲྭ་གཅིག་དང་ སློབ་གྲྭ་ ༣༤ དེ་ཅིག་ཡོདཔ་ཨིན། དེ་ལས་ བསམ་རྩེ་རྫོང་ཁག་འདི་ནང་ ཨ་ལོ་གཅེས་སྐྱོང་ལྟེ་བ་ ༢༤ དང་ གཞི་རྟེན་ཤེས་ཡོན་བྱིན་སའི་ས་ཁོངས་ ༦༠ ལྷག་རྩམ་ཅིག་ཡོདཔ་ཨིན། མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་དང་སྣུམ་འཁོར་འགྲུལ་ལམ་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ དེ་ལས་ གཞན་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ རྫོང་ཁག་གཞན་བཟུམ་ སྦེ་རང་འཐོབ་དོ་ཡོདཔ་ཨིན། <br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ ཉེན་སྲུང་དང་ལྡན་པའི་མཐའ་འཁོར་གནས་སྟངས་དང་ ལམ་སྲོལ་གཅིག་མཚུངས་ཀྱི་སྒོ་ལས་ ཕུན་སུམ་ཚོགས་པའི་མི་སྡེ་ཅིག་སྦེ་གནས་ནི་འདི་ཨིནམ་དང་། དམིགས་སྐྱེད་འདི་ཡང་ མི་དམངས་ཞབས་ཏོག་དང་གཞི་རྟེན་མཐུན་རྐྱེན་ཚུ་ འདྲ་མཉམ་དང་ཡུན་བརྟན་སྦེ་ཕུལ་ཐོག་ མི་སེར་ཚུའི་དཔལ་འབྱོར་མཐའ་འཁོར་གནས་སྟངས་དང་ ལམ་སྲོལ་གྱི་ཞི་བདེ་ངེས་བརྟེན་བཟོ་ནི་འདི་ ཨིན། ད་རེས་ རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་རྫོང་རབ་དང་དྲུང་པ་གཉིས་ དེ་ལས་ ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big>
+=== གསར་སྤང་རྫོང་ཁག། ===
+<big>༉ གསར་སྤང་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ལྷོ་ཕྱོགས་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ ཁྱིམ་ཚང་རྒྱ་རྒར་རྒྱལ་ཁབ་ཀྱི་ས་གནས་ ཨ་སམ་གྱི་ས་མཚམས་ལུ་ཡོདཔ་དང་ ཧེ་མ་ལྷོ་མཚམས་སྤྱི་ཁྱབ་ཀྱི་འོག་ལུ་གནས་ཡོད་མི་ ཤོམ་སྤང་ཁ་ཟེར་མི་མངའ་སྡེ་འདི་ སྤྱི་ལོ་ ༡༩༧༣ ལུ་ རྫོང་བདག་གིས་དབང་བའི་གསར་སྤང་རྫོང་ཁག་སྦེ་གཞི་བཙུགས་འབད་ནུག། དེ་ལས་ རྫོང་ཁག་འདི་གི་ས་ཁྱོན་ གྲུ་བཞི་ཀི་ལོ་མི་ཏར་ ༡༩༤༦ཡོདཔ་དང་ འདི་ནང་ཁྲོམ་སྡེ་གཅིག་དང་དྲུང་ཁག་གཅིག་དེ་ལས་ རྒེད་འོག་བཅུ་གཉིས་ཡོདཔ་ཨིན། གསར་སྤང་རྫོང་ཁག་ནང་ མི་རློབས་ ༤༦,༠༠༤ ཡོད་ས་ལས་ མང་ཤོས་ལྷོ་མཚམས་པ་ཚུ་ཨིནམ་དང་ དེ་བཟུམ་སྦེ་ཁ་སྐད་ཡང་མང་ཤོས་ཀྱིས་ལྷོ་མཚམས་ཀྱི་ཁ་སྐད་ནེ་པ་ལི་འདི་སླབ་དོ་ཡོདཔ་ཨིན། འདི་མ་ཚད་ འབྲུག་རྒྱལ་ཁབ་དང་རྒྱ་གར་རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ན་ འགྲོ་འགྲུལ་འབད་སའི་འཛུལ་སྒོ་གསུམ་ཡོད་ས་ལས་ གཅིག་གསར་སྤང་རྫོང་ཁག་ནང་ཡོདཔ་ལས་ འབྲུག་དང་རྒྱ་གར་གཉིས་གཅིག་གིས་གཅིག་ལུ་ ཚོང་འབྲེལ་དང་དཔལ་འབྱོར་གྱི་ལཱ་ཚུ་འབད་སའི་ རྒྱུན་ལམ་གྱི་ས་གནས་གལ་ཅན་ཅིག་ཨིན། <br>
+གསར་སྤང་རྫོང་ཁག་གི་ས་ཁྱོན་མང་ཤོས་ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ལས་ རི་ནགས་ཀྱི་འཚོ་བ་དང་ལྡནམ་སྦེ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ གི་ནུབ་ཕྱོགས་ཀྱི་ས་གནས་ཚུ་ ཕིབ་སོ་རི་དྭགས་སྲུང་སྐྱོབ་ས་ཁྱོན་གྱི་ཆ་ཤས་ཨིནམ་དང་ བྱང་ཕྱོགས་ཀྱི་ས་གནས་ཚུ་ འཇིགས་མེད་སེང་གེ་ དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་གའི་ས་ཁྱོན་གྱི་ཆ་ཤས་ཨིན། འདི་བཟུམ་སྦེ་ རྫོང་ཁག་འདི་གི་ཤར་ཕྱོགས་དང་ལྷོ་ཕྱོགས་ཀྱི་ས་གནས་ཚུ་ མ་ནཱསི་རྒྱལ་ཡོངས་གླིང་གའི་ནང་འཁོད་ཨིནམ་ལས་ འདི་ནང་གཅན་གཟན་གྱི་རིགས་དང་གླངམོ་ཆེ་ དེ་ལས་ གཞན་རི་དྭགས་སྣ་ཚོགས་འཁྱམས་ཏེ་ ཡོདཔ་ཨིན།རྫོང་ཁག་འདི་ནང་རི་དྭགས་སྲུང་སྐྱོབ་དང་རྒྱལ་ཡོངས་གླིང་ག་འདི་ཚུ་ཡོདཔ་ལས་ བལྟ་བཤལ་གྱི་ས་གནས་མཆོག་གྱུར་ཅིག་ཡང་ཨིན། འདི་དང་འདྲཝ་སྦེ་ རི་ཁའི་ཚོད་བསྲེ་དང་ཤིང་འབྲས་ཚུ་ཡང་ལེ་ཤ་རང་འཚོ་དོ་ཡོདཔ་ལས་ གསར་སྤང་རྫོང་ཁག་འདི་ སྐྱེས་ལྡན་རིགས་སྣ་གིས་ཕྱུག་པའི་རྫོང་ཁག་ཅིག་ཨིན། <br>
+དུས་འགྱུར་གྱི་ཡར་རྒྱས་གོང་འཕེལ་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ ལུང་ཕྱོགས་གཙོ་བསྟེན་སྨན་ཁང་གཅིག་དང་ གཞན་གསོ་བའི་ལྟེ་བ་ ཚུ་ དེ་ལས་ ཤེས་ཡོན་སྦྱང་སའི་སློབ་གྲྭ་ཚུ་ཡོདཔ་ཨིན། མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་དང་སྣུམ་འཁོར་འགྲུལ་ལམ་ དེ་ལས་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ཚུ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ཚ་དྲོད་དང་ལྡན་པའི་ས་གནས་ཅིག་འབདཝ་ལས་ ཤིང་འབྲས་རྡོག་མ་ གི་ཐོན་ཤུགས་སྦོམ་ཡོདཔ་ལས་ རྫོང་ཁག་འདི་གི་མི་མང་ཤོས་ཅིག་ འཚོ་བ་འདི་ལུ་བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་དང་ གཞན་ཡང་ གེ་ཟ་དང་བྱཱ་ ཚོད་བསྲེ་གི་རིགས་ཚུ་ རྣམ་རྒྱུན་བཟའ་འཐུང་གི་དོན་ལུ་འཚོ་བ་སྐྱོང་དོ་ཡོདཔ་ཨིན། <br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ ལམ་སྲོལ་མ་ཉམས་པ་དང་མཐའ་འཁོར་སྔོ་ལྗང་དང་ལྡན་པ་ དེ་ལས་ ཡུན་བརྟན་གྱི་མི་སྡེ་དཔལ་འབྱོར་ དང་ལྡན་པའི་ མཁས་རིག་གི་ཚོང་འབྲེལ་ལྟེ་བ་ཅིག་སྦེ་གནས་ནི་ཨིནམ་དང་།  དམིགས་སྐྱེད་འདི་ཡང་ རྫོང་ཁག་གི་མི་ཚུ་གི་ མི་ཚེ་འཚོ་སྐྱོང་ ཡུན་བརྟན་གི་དོན་ལུ་ དགོས་མཁོའི་ཞབས་ཏོག་ཚུ་གང་མགྱོགས་སྦེ་བྱིན་ནི་དང་  མཐའ་འཁོར་ཡུན་བརྟན་སྔོ་ལྗང་དང་ལྡན་པའི་སྒོ་ལས་ མི་སྡེ་ དཔལ་འབྱོར་གོང་འཕེལ་གཏང་ནི་ དེ་ལས་ མི་སྡེ་དགའ་སྐྱིད་ཀྱི་དོན་ལུ་ རང་ལུགས་ཀྱི་ལམ་ལུགས་སྲུང་སྐྱོབ་དང་ཡར་རྒྱས་གཏང་ནི་དང་ རྫོང་ཁག་འདི་ ཚོང་འབྲེལ་གི་ལྟེ་བ་ཅིག་ལུ་བསྒྲུབ་ནི་དོན་ལུ་ སེམས་ཤུགས་བསྐྱེད་ནི་འདི་ཨིན།  ད་རེས་རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་རྫོང་རབ་དང་དྲུང་པ་ དེ་ལས་ ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big> 
+
+=== ཀྲོང་གསར་རྫོང་ཁག། ===
+<big>ཀྲོང་གསར་རྫོང་ཁག་འདི་ བྱང་ཤར་ལས་བུམ་ཐང་རྫོང་ཁག་དང་ལྷོ་ལས་གཞལམ་སྒང་རྫོང་ཁག་ ནུབ་ལས་དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་གི་སྦུག་ལུ་ རྒྱ་མཚོའི་ཚད་ལས་མི་ཊར་ ༨༠༠ ལས་ ༤༨༠༠ གི་ས་ཁར་ཆགས་ཡོད་པའི་ འབྲུག་གི་དབུས་ཕྱོགས་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ གི་ཆགས་རབས་ཡང་ སྔོན་ཡོངས་འཛིན་ངག་གི་དབང་ཕྱུག་མཆོག་ཉམས་སྣང་ལུ་ ཆོས་སྲུང་དཔལ་ལྡན་ལྷ་མོ་གིས་ འབྲུག་དབུས་ཕྱོགས་ལུ་འགྱོ་དགོཔ་སྦེ་མཇལ་ཡོདཔ་བཞིན་དུ་  ལུང་བསྟན་དང་འཁྲིལ་ དཔལ་ལྡན་ལྷ་མོའི་དཔུང་གྲོགས་ཀྱི་སྒོ་ལས་ སྤྱི་ལོ་ ༡༥༤༡ ལུ་ ཀྲོང་གསར་གཡུ་གླིང་ཟེར་ས་བྱོན་ཏེབཞུགསཔ་ད་ ཕྱི་རུ་སྒོམ་གྱི་ཉམས་སྣང་ལུ་ ད་ལྟོ་ཡོད་པའི་མགོན་ཁང་དེ་ཁར་ ནམ་མཁའ་སྟོང་པའི་ནང་ལས་ དཀར་མེ་འདྲ་བའི་མེའི་འོག་ཅིག་ཤར་ས་གཟིགས་ཏེ་ ཡོངས་འཛིན་མཆོག་གིས་ སྤྱི་ལོ་ ༡༥༤༣ ལུ་ དེ་ཁར་མཚམས་ཁང་ཅིག་རྐྱབ་སྟེ་ སྒོམ་གནང་བཞུགས་ནུག། ཤུལ་ལས་ སྒོམ་རྐྱབ་མི་གཞན་ཚུ་ཡང་དེ་ཁར་འོངས་ཏེ་ མཚམས་ཁང་ལེ་ཤ་ཆགས་ཡོདཔ་ལས་ ཕྱི་མི་ཚུ་གིས་བལྟཝ་ད་ གཡུས་བཟུམ་མཐོངམ་ལས་ ས་གནས་འདི་གི་མིང་ལུ་ ཀྲོང་གསར་ཟེར་ གཡུས་ཚན་གསརཔ་ཟེར་དར་ནུག།<br>
+དེ་ལས་ སྤྱི་ལོ་ ༡༦༤༧ ལུ་ དཔལ་ལྡན་འབྲུག་པ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གིས་ ས་གནས་འདི་གཞུང་འབྲེལ་གྱི་ཕྱག་ལཱ་ གནང་སའི་ས་གནས་ཅིག་ལུ་བཟོ་གནང་སྟེ་ ཆོས་རྒྱལ་མི་་འགྱུར་བརྟན་པ་མཆོག་ ཀྲོང་གསར་དཔོན་སློབ་དང་པ་བཀལ་ཡོདཔ་དང་ ཞབས་དྲུང་རིན་པོ་ཆེ་གིས་བཀའ་གནངམ་བཞིན་དུ་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱིས་འདི་ཁར་རྫོང་བཞེངས་གནང་སྟེ་ རྫོང་ཁག་ཅིག་སྦེ་ཆགས་ཡོདཔ་ ཨིན། རྫོང་འདི་གི་མཚན་ཡང་ འབྲུག་མི་འགྱུར་ཆོས་འཁོར་རབ་བརྟན་རྩེ་ཟེར་བཏགས་ཡོདཔ་དང་ མཚན་དེའི་དོན་དག་འདི་ཡང་ ས་གནས་དུང་དཀར་རྩེ་བཟུམ་ལུ་ཆགས་ཡོད་པའི་རྫོང་འདི་ འགྱུར་ནི་མེད་པའི་འབྲུག་རྒྱལ་ཁབ་ནང་ལུ་ ཆོས་ཀྱི་འཁོར་ལོ་རབ་ཏུ་བརྟན་ཏེ་ ཡུན་རིང་དུ་གནས་པའི་དོན་ཨིན་མས། ཀྲོང་གསར་རྫོང་ཁག་འདི་ རྩ་ཅན་ཅིག་ཨིནམ་དང་ དེ་ཡང་ ཧེ་མ་ཤར་ཕྱོགས་རྫོང་ཁག་ཚུ་གི་ལྟེ་བ་སྦེ་སྡོད་ཡོད་པའི་ཁར་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་བཞུགས་གནས་ཡང་ཨིན་མས། ད་རེས་ཡང་ འབྲུག་བརྒྱུད་འཛིན་གྱི་རྒྱལ་སྲས་ཚུ་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ཁྲི་མངའ་སྲོལ་ཡང་ དེ་ཁར་འབདཝ་ཨིན།ད་ལྟོ་རྫོང་འདི་ ཀྲོང་གསར་རྫོང་ཁག་གི་ བདག་སྐྱོང་དང་རབ་སྡེའི་ཕྱག་ལཱ་གནང་སའི་ལྟེ་བ་ཨིནམ་དང་ རྫོང་ནང་ལུ་ ལྷ་ཁང་ ༢༦ ཡོདཔ་དང་ དགེ་སློབ་ཞལ་གྲངས་ ༤༥༠ ཡོདཔ་ཨིན།<br>
+ཀྲོང་གསར་རྫོང་ཁག་གི་སའི་ཆགས་ཚུལ་ གོ་དོག་དྲགས་སྦེ་ཡོདཔ་དང་ ས་གཞིས་དེ་ཡང་ རློན་ཞིང་དྲོད་དང་ལྡན་པའི་ཁར་ བསིལ་དྲོད་སྙོམས་ཏོག་ཏོ་སྦེ་ཡང་སྡོད་དོ་ཡོདཔ་ཨིན། དེ་ལས་རྫོང་ཁག་འདི་ནང་ དུས་རབས་ ༨ པའི་ནང་ ཨྱོན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་ བུམ་ཐང་ལས་ལོག་རྒྱ་གར་ལུ་བྱོནམ་ད་ སྒོམ་གནང་བཞུགས་ཡོདཔ་ལས་ ཞབས་རྗེ་དང་བྱིན་ཅན་གྱི་གནས་ ནུབ་སྦིས་ ཀུབ་བྲག་ ཨྱོན་བྲག་དང་ ཕུམ་ཟུར་ལྷ་ཁང་ཚུ་ནང་མཇལ་ནི་ཡོདཔ་ཨིན། དེ་འབདཝ་ལས་ ས་གནས་འདི་བྱིན་རླབས་ཅན་གྱི་ས་གནས་ཅིག་ཨིན། རྫོང་ཁག་འདི་ ས་ཁྱོན་གྲུ་བཞི་ཀོ་ལོ་མི་ཊར་ ༡༥༨༧ ཡོདཔ་དང་ འདི་ནང་ བྲག་སྟེང་ གོར་ཕུག་ ནུབ་སྦིས་ གླང་མཐིལ་ སྟང་སི་སྦིས་བཅས་ རྒེད་འོག་ལྔ་ཡོད།འདི་ནང་མི་རློབས་ ༡༩,༩༦༠ ཡོདཔ་དང་ ག་བ་ཡང་ཧེ་མ་སྡོད་ཡོད་པའི་ མོན་པ་ཚུ་གནས་ཏེ་ཡོདཔ་ཨིན།ཀྲོང་གསར་རྫོང་ཁག་གི་མི་སེར་ཚུ་ མང་ཆ་ཤོས་ཅིག་ སོ་ནམ་ཞིང་ལཱ་ལུ་བརྟེན་དོ་ཡོདཔ་ལས་  ཞིང་པ་ཚུ་གིས་ལོ་ཐོག་ཡང་སྣ་ཚོགས་སྦེ་ར་བཙུགས་དོ་ཡོད་པའི་ཁར་ གཡུས་ཚན་ལ་ལུ་ཅིག་ནང་ ཀེ་བ་ལུ་གཙོ་བོར་བཏོན་ཏེ་འོང་འབབ་བཟོ་དོ་ཡོདཔ་ཨིན། དེ་ལས་ ཀྲོང་གསར་གྱི་མི་ཚུ་ལས་མང་ཤོས་ཀྱིས མང་སྡེ་པའི་ཁ་སླབ་དོ་ཡོདཔ་དང་ ཆ་ཤས་ཀྱིས་བུམ་ཐང་པའི་ཁ་སྐད་དང་ ཆ་ཤས་ཀྱིས་ཁེངས་ཁ་ དེ་ལས་ རེམ་གཉིསམོ་གིས་ ཨོ་ལེ་ཁ་ སླབ་དོ་ཡོདཔ་ཨིན། <br>
+ཀྲོང་གསར་རྫོང་ཁག་གི་སའི་རྒྱ་ཁྱོན་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༡༥༨༧ ཡོད་ས་ལས་ བརྒྱ་ཆ་ ༨༧.༡༥ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ལས་ སའི་རྒྱ་ཁྱོན་གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༡༧༢༣ འབད་མི་ འཇིགས་མེད་སེངྒེ་དབང་ཕྱུག་གླིང་ག་ཡང་ ཀྲོང་གསར་རྫོང་ཁག་ནང་ཚུདཔ་ཨིན། གླིང་ག་དེ་ཁར་ འཛམ་གླིང་ནང་ལུ་དཀོན་དྲགས་དང་ཉམས་ནིའི་ཉེན་ཁ་ཡོད་མི་ སེམས་ཅན་དང་ཤིང་རིགས་ཚུ་ཡོདཔ་མ་ཚད་ འཛམ་གླིང་ནང་ལུ་དཀོན་དྲགས་ཆེ་བའི་ སྤྱ་དཀར་གསེར་གྱི་མདོག་ཅན་འདི་ཡང་ཡོདཔ་ཨིན། གླིང་ག་འདི་སྤྱི་ལོ་ ༢༠༠༠ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་དང་ འདི་ཡང་ མི་གིས་མ་རེག་པའི་སྐྱེ་ལྡན་གནས་སྟངས་རིམ་ལུགས་འདི་ རང་འཇགས་སྦེ་བཞག་ནི་དང་ སྲུང་སྐྱོབ་འབད་ནིའི་དོན་ལུ་ཨིན། གླིང་ག་འདི་ནང་ ཀོང་ཤིང་དང་ཤིང་ཤོམ་འདབ་སྦོམ་ཡོད་མིའི་རིགས་ཚུ་ཡོདཔ་ཨིན། འདི་བཟུམ་སྦེ་ རྫོང་ཁག་འདི་ནང་འབབ་ཆུ་ལེགས་ཤོམ་ཡོདཔ་ལས་ མེ་ག་ཝཊ་ ༧༢༠ འབད་མི་ མང་སྡེ་ཆུ་གློག་མེ་ལས་འཛིན་ཡང་ཡོད། འདི་གིས་ གློག་མེ་ལས་བརྟེན་པའི་ གཞུང་གི་དཔལ་འབྱོར་གོང་འཕེལ་ལུ་ ལྷན་ཐབས་སྦོམ་འབད་དོ་ཡོདཔ་ཨིན། <br>
+རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ གསོ་བའི་ཞབས་ཏོག་གནང་སའི་ སྨན་ཁང་གཅིག་དང་གསོ་བའི་ལྟེ་བ་ཚུ་ དེ་ལས་ རྒྱལ་ཁབ་ཀྱི་ལམ་སྲོལ་ལུ་གཙོ་བོ་བཏོན་པའི་ རིག་གཞུང་ལམ་སྲོལ་སྦྱང་སའི་མཐོ་རིམ་སློབ་གྲྭ་གཅིག་ཡོདཔ་དང་ སློབ་གྲྭ་ ༢༠ དེ་ཅིག་ཡོདཔ་ཨིན། མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་དང་སྣུམ་འཁོར་འགྲུལ་ལམ་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ དེ་ལས་ གཞན་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ རྫོང་ཁག་གཞན་བཟུམ་སྦེ་རང་འཐོབ་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ རང་བཞིན་དང་མཐུན་པའི་སྒོ་ལས་ མི་སྡེའི་དཔལ་འབྱོར་སྒྲིང་སྒྲིང་བཟོ་ནི་ཨིནམ་དང་།དམིགས་སྐྱེད་འདི་ཡང་འཇོན་དྲགས་དང་དོན་སྨིན་ཅན་གྱི་སྒོ་ལས་ ཞབས་ཏོག་སྤྲོད་ནི་འདི་ཨིན།ད་རེས་ རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་རྫོང་རབ་དང་ དེ་ལས་ ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་ གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big> 
+
+=== གཞལམ་སྒང་རྫོང་ཁག། ===
+<big>༉ གཞལམ་སྒང་རྫོང་ཁག་འདི་ ཤར་ལས་མོང་སྒར་དང་པདྨ་དགའ་ཚལ་རྫོང་ཁག་ ནུབ་ལས་གསར་སྤང་དང་ཀྲོང་གསར་རྫོང་ཁག་ བྱང་ལས་བུམ་ཐང་རྫོང་ཁག་དང་ ལྷོ་ལས་རྒྱ་གར་གྱི་མངའ་སྡེ་ཨ་སམ་ཚུ་གི་སྦུག་ནང་ཆགས་ཡོད་པའི་ འབྲུག་ལྷོ་མཚམས་ཀྱི་དབུས་ཕྱོགས་རྫོང་ཁག་ཅིག་ཨིན། ཡོངས་གྲགས་ལུ་གཞལམ་སྒང་རྫོང་ཁག་འདི་ ཁེངས་རིགས་རྣམ་གསུམ་ཟེར་སླབ་དོ་ཡོདཔ་དང་ འདི་ཡང་ ཁེངས་སྟོད་སྨད་བར་གསུམ་ལུ་ ཕྱོགས་དབྱེ་སྟེ་ཡོདཔ་ལས་བརྟེན་ཨིན་མས། གཞལམ་སྒང་རྫོང་ཁག་གི་ས་ཁྱོན་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༢༤༢༡ ཡོདཔ་དང་ སའི་ཆགས་ཚུལ་ཡང་གོ་དོག་དྲགས་སྦེ་ རློན་ཞིང་དྲོད་དང་ལྡན་པའི་ཁར་ བྱང་ཕྱོགས་ཁ་ཐུག་ལུ་བསིལ་ཏོང་ཏོ་སྦེ་ཡོདཔ་ཨིན།རྫོང་ཁག་འདི་ སྔོན་དུས་རབས་ ༡༢ པའི་སྤྱི་ལོ་ ༡༡༦༣ ལུ་ བླ་མ་ཞང་རྡོ་རྗེ་ གྲགས་པ་མཆོག་བོད་ལས་བྱོན་ཏེ་ ད་ལྟོ་ཡོད་པའི་གཞལམ་སྒང་རྫོང་གི་ས་གནས་འདི་ཁར་ མཚམས་ཁང་གཅིག་བཞེངས་ཏེ་བཞུགས་ཡོདཔ་དང་ ཤུལ་ལས་རྒྱ་སྐྱེད་མཛད་དེ་རབ་སྡེ་ཅིག་ལུ་གྱུར་ཡོདཔ་ཨིན། འདི་མ་ཚད་ ཤུལ་ལས་འབྲུག་རྒྱལ་རིམ་བྱོན་གྱི་སྐབས་ལུ་ རྫོང་འདི་གཞུང་འབྲེལ་གྱི་ཕྱག་ལཱ་གནང་སའི་ལྟེ་བ་སྦེ་ཡང་བཟོ་ཡོདཔ་ལས་ རྫོང་ཁག་སྦེ་ཆགས་ཡོདཔ་ཨིན། <br>
+གཞལམ་སྒང་རྫོང་ཁག་ནང་ ད་རེས་ དྲུང་ཁག་གཅིག་དང་ ཀྲོང་ ངང་ལ་ ནང་སྐོར་ བར་རྡོ་ འཕངས་མཁར་ འབྱོག་དཀར་ ཤིང་མཁར་ སྒོ་ཤིང་བཅས་ རྒེད་འོག་བརྒྱད་ཡོདཔ་དང་ འདི་ནང་ཁྱིམ་གུང་པ་ ༣༨༠༣ དང་མི་རློབས་ ༡༧,༧༦༣ཡོདཔ་ཨིན། འདི་ནང་གི་མི་མང་ཤོས་ཀྱིས ཁེངས་ཁ་འདི་ལག་ལེན་འཐབ་དོ་ཡོདཔ་དང་ ཡོངས་གྲགས་ལུ་འདི་ནང་གི་མི་ཚུ་ལུ་ ཁེངས་པ་ཟེར་སླབ་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་མི་སེར་ཚུ་ འཚོ་བ་སོ་ནམ་ལུ་གཙོ་བོ་བཏོན་དོ་ཡོདཔ་ལས་ གེ་ཟ་ལ་སོགས་པའི་འབྲུ་སྣ་དགུའི་རིགས་ག་ར་འཚོ་དོ་ཡོདཔ་དང་ ལྷོ་ཕྱོགས་ཁ་ཐུག་ཀྱི་ས་གནས་ཚུ་ནང་ དངུལ་ཐོག་གཙོ་བོ་ཚལ་ལུ་གི་ཐོན་ཤུགས་སྦོམ་ཡོདཔ་ལས་ དངུལ་གྱི་འོང་འབབ་སྦོམ་བཟོ་དོ་ཡོདཔ་ཨིན། དེ་ལས་ ནུབ་ཕྱོགས་ཁ་ཐུག་གི་ས་གནས་ཚུ་ནང་ སྒོ་ནོར་གྱི་ལཱ་ལུ་གཙོ་བོ་བཏོན་དོ་ཡོདཔ་ལས་ སྒོ་ནོར་གསོ་སྐྱོང་གི་ཐོན་ཁུངས་ལུ་བརྟེན་སྡོད་དོ་ཡོདཔ་ཨིན། འདི་བཟུམ་སྦེ་ རྫོང་ཁག་འདི་ནང་གི་མི་ཚུ་གིས་ ཚར་བཟོའི་ལཱ་རྒྱ་ཆེཝ་སྦེ་འབད་དོ་ཡོདཔ་ལས་ རང་ལུགས་ཀྱི་བང་ཅུང་ ཚར་ཞྭ་ པ་ལང་ ཙེའུ་ལ་སོགས་པའི་ཚར་བཟོའི་ཐོན་དངོས་ཚུ་ ཚོང་འབྲེལ་གྱི་དོན་ལུ་དང་ རང་ལུགས་སྲུང་སྐྱོབས་ཀྱི་དོན་ལུ་གཙོ་བོ་བཏོན་དོ་ཡོདཔ་ཨིན། <br>
+གཞལམ་སྒང་རྫོང་ཁག་ནང་ ད་ལྟོའི་བར་ན་ཡང་ བོན་གྱི་ཆོས་ལུགས་མ་ཉམས་པར་ཡོདཔ་ལས་ གཞན་རྫོང་ཁག་གཞན་ཚུ་ནང་མེད་པའི་ བོན་གྱི་ཆོས་ལུགས་ཐུན་མོང་མ་ཡིན་པ་ཡོད་པའི་ས་གནས་ཅིག་ཨིནམ་དང་ སྔར་སྲོལ་གྱི་གླུ་གཞས་དང་ཞབས་ཁྲ་ཚུ་མ་ཉམས་པར་ཡོད་པའི་ ལམ་སྲོལ་ བཟང་པོ་ཚུ་གིས་ཕྱུག་པའི་རྫོང་ཁག་ཨིན། འདི་དང་འདྲཝ་སྦེ་ རྫོང་ཁག་འདི་ནང་ གཏེར་སྟོན་པདྨ་གླིང་པ་གིས་བཞེངས་གནང་ཡོད་པའི་ བུ་ལི་དང་ཐར་པ་ཆོས་གླིང་ལྷ་ཁང་ལ་སོགས་པའི་ བྱིན་ཅན་གྱི་ས་གནས་དང་ལྷ་ཁང་ཚུ་མཇལ་ནི་ཡོདཔ་ཨིན། གཞན་ཡང་ གཞལམ་སྒང་རྫོང་ཁག་འདི་ ནགས་ཚལ་གྱི་ཁྱབ་ཚད་སྦོམ་ཡོདཔ་ལས་ མ་ནཱསི་དང་འཇིགས་མེད་སེངྒེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ག་ དེ་ལས་ རི་དྭགས་སྲུང་སྐྱོབ་ཀྱི་ས་གོ་ཚུ་ཡོདཔ་ཨིན། ས་གནས་འདི་ཚུ་ནང་ འཛམ་གླིང་ནང་ལུ་དཀོན་དྲགས་དང་ཉམས་ནིའི་ཉེན་ཁ་ཡོད་མི་ སེམས་ཅན་གྱི་རིགས་ ༢༢ དེ་ཅིག་ཡོདཔ་དང་ འཛམ་གླིང་ནང་ལུ་དཀོན་དྲགས་ཆེ་བའི་ སྤྱ་དཀར་གསེར་གྱི་མདོག་ཅན་དང་བསེ་རུ་ཚུ་ཡང་ཡོདཔ་ཨིན།<br>
+རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་དང་བསྟུན་ ད་རེས་ རྫོང་ཁག་འདི་ནང་ གསོ་བའི་ཞབས་ཏོག་གནང་སའི་ སྨན་ཁང་གཅིག་དང་གསོ་བའི་ལྟེ་བ་ཚུ་ དེ་ལས་ སློབ་གྲྭ་ ༡༤ ཡོདཔ་ཨིན། མཐུན་རྐྱེན་གཞན་ཡང་ གློག་མེ་དང་སྣུམ་འཁོར་འགྲུལ་ལམ་ ཡོངས་འབྲེལ་དང་དངུལ་འབྲེལ་གྱི་ཞབས་ཏོག་ དེ་ལས་ གཞན་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ རྫོང་ཁག་གཞན་བཟུམ་སྦེ་རང་འཐོབ་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ སོ་ནམ་གྱི་ལཱ་དང་ཐོན་ཤུགས་ཡར་རྒྱས་ཀྱི་ཐོག་ལས་ ཁེངས་རིགས་རྣམ་གསུམ་གྱི་མི་ཚུ་གི་མི་སྡེ་དཔལ་འབྱོར་གོང་འཕེལ་དང་ སོ་ནམ་གྱི་ཐོན་སྐྱེད་རང་དགོ་རང་ལངས་བཟོ་ནི་འདི་ཨིནམ་དང་། དམིགས་སྐྱེད་འདི་ཡང་འཕྲུལ་རིག་དང་ཚོང་ལཱ་ དེ་ལས་ ཚོང་འབྲེལ་ཚུ་ འགོ་སྒྲིག་རྣམ་དག་གི་སྒོ་ལས་སོ་ནམ་གྱི་ཐོན་ཤུགས་ཡར་རྒྱས་གཏང་ནི་འདི་ཨིན།ད་རེས་ རྫོང་ཁག་འདི་ནང་ རྫོང་བདག་གིས་གཙོས་པའི་རྫོང་རབ་དང་དྲུང་པ་ དེ་ལས་ ལས་སྡེ་ཁག་གི་འགོ་དཔོན་ཚུ་གིས་ འཆར་སྣང་དང་དམིགས་སྐྱེད་ཚུ་སེམས་ཁར་བཀལ་ཏེ་ རྒྱལ་ཁབ་ཡར་རྒྱས་གོང་འཕེལ་གྱི་དོན་ལུ་ གཞུང་དང་མི་སེར་གྱི་ཞབས་ཏོག་ཚུ་ ཕྱག་ཕྱིད་གང་དྲག་ཞུ་བཞིན་ཡོདཔ་ཨིན།</big> 
+=== ཆུ་ཁ་རྫོང་ཁག། ===
+<big>༉ ཆུ་ཁ་རྫོང་ཁག་འདི་ ལོ་ལྔའི་འཆར་གཞི་དྲུག་པ་འགོ་བཙུགས་པའི་དུས་མཉམ་  སྤྱི་ལོ་ ༡༩༨༧ ལུ་ གཞི་བཙུགས་འབད་ནུག། རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༨༧༩.༥ འབད་མི་རྫོང་ཁག་འདི་ ནུབ་ཕྱོགས་ལུང་ཕྱོགས་ནང་ རྒྱ་མཚོའི་མཐའ་མ་ལས་ མཐོ་ཚད་མི་ཊར་ ༢༠༠-༣༥༠༠ གི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན།<br>
+ཆུ་ཁ་རྫོང་ཁག་འདི་ཁབ་ཀྱི་དབུས་ཕྱོགས་དང་ནུབ་ཕྱོགས་ས་གནས་ཚུ་ནང་འཛུལ་སའི་འཛུལ་སྒོ་ཅིག་ཨིནམ་མ་ཚད་ རྒྱལ་ཁབ་ནང་འུར་བྱེལ་ཅན་གྱི་ཚོང་འབྲེལ་འཐབ་སའི་ལྟེ་བ་དང་ནང་འདྲེན་དང་ཕྱིར་ཚོང་འཐབ་སའི་ས་ཁོངས་ལྟེ་བ་ཅིག་ཨིན་མི་ ཕུན་ཚོགས་གླིང་དྲུང་ཁག་ཡང་ རྫོང་ཁག་འདི་ནང་ཆགས་ཏེ་ ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་ནང་ ཕུན་ཚོགས་གླིང་དྲུང་ཁག་དང་ཁྲོམ་སྡེ། བསམ་འཕེལ་གླིང་རྒེད་འོག་དང་སྦོང་གོ་རྒེད་འོག། བྱག་ཕྱོགས་རྒེད་འོག། སྐྱབས་ཆ་རྒེད་འོག། དར་ལ་རྒེད་འོག། གདུང་ན་རྒེད་འོག། དགེ་ཏ་ན་རྒེད་འོག། དགེ་གླིང་རྒེད་འོག། ལོག་ཅི་ན་རྒེད་འོག། སྨད་སྟབས་ཁ་རྒེད་འོག། ཕུན་ཚོགས་གླིང་རྒེད་འོག་ཚུ་བརྩིས་པའི་ དྲུང་ཁག་གཅིག་དང་ཁྲོམ་སྡེ་གཅིག་ དེ་ལས་ རྒེད་འོག་བཅུ་གཅིག་ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་ནང་ བཟའ་སྤྱོད་འབད་བཏུབ་པའི་ས་གཞི་ བརྒྱ་ཆ་ ༤.༩ ཡོདཔ་ད་ རྒེད་འོག་ག་རའི་ནང་ སོ་ནམ་ཞིང་ལམ་དང་འཐུང་ཆུ་ གློག་མེ་དང་འགྲུལ་འཕྲིན་གྱི་མཐུན་རྐྱེན་ཚུ་ལྷོད་དེ་ཡོདཔ་ཨིན།<br>
+སྤྱི་ལོ་ ༢༠༡༦ ལོ་ལུ་ བརྡ་དོན་དང་བརྒྱུད་འབྲེལ་ལྷན་ཁག་གིས་ རྫོང་ཁག་འདི་ནང་གི་རྒེད་འོག་ག་རའི་ནང་ གློག་རིག་ཡོངས་འབྲེལ་གྱི་མཐུན་རྐྱེན་ཚུ་བྱིན་ཏེ་ཡོདཔ་མ་ཚད་ རྩིས་ལོ་ ༢༠༡༧-༢༠༡༨ ལུ་ རྫོང་ཁག་བརྡ་དོན་འཕྲུལ་རིག་ཡིག་ཚང་གིས་ རྒེད་འོག་བརྒྱུད་དེ་ སྨན་ཁང་དང་སློབ་གྲྭ་ཚུ་ནང་ལས་ཕར་ཡང་ མཐུན་རྐྱེན་དེ་ཚུ་བྱིན་ཏེ་ཡོདཔ་ཨིན།<br>
+རྒྱལ་ཁབ་ཀྱི་དོན་ལུ་ འོང་འབབ་ཀྱི་ཐོན་ཁུངས་གཙོ་བོ་ཅིག་ཨིན་མི་ ཆུ་ཁ་གློག་མེ་འཕྲུལ་ཁང་དང་ དར་ལ་གློག་མེ་འཕྲུལ་ཁང་གཉིསཔོ་འདི་ཡང་ རྫོང་ཁག་འདི་ནང་ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་ནང་གི་མི་སེར་མང་ཤོས་ཅིག་ར་ འཚོ་བ་སྒོ་ནོར་དང་ རང་འཚོ་ཙམ་གྱི་སོ་ནམ་ལཱ་ལུ་བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་ད་ བྱཱ་འཛུག་སྐྱོང་འདི་རྗོང་ཁག་འདི་ནང་ ཁྱབ་ཆེ་བའི་སོ་ནམ་གྱི་ལཱ་ཅིག་ཨིནམ་མ་ཚད་ ཚལ་ལུ་དང་ཀེ་བ་ ཨ་ལཱན་ཅི་དེ་ དངུལ་ཐོག་གཙོ་བོ་ཅིག་ཨིན།<br>
+རྫོང་ཁག་འདི་ནང་ མི་རློབས་ ༨༤༢༠༣ དེ་ཅིག་ཡོདཔ་ད་ དེ་ནང་ཁྱིམ་གུང་པ་ ༢༨༧༠ ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ མི་སྡེ་གཅིག་མཐུན་དང་ཕན་ནུས་ཅན་གྱི་ལམ་སྲོལ་ རང་བཞིན་མཐའ་འཁོར་གནས་སྟངས་བརྟན་ཏོག་ཏོ་དང་གོང་འཕེལ་འདྲ་མཉམ་གྱི་སྒོ་ལས་ དཔལ་འབྱོར་གྱི་ཐད་ཁར་ རྫོང་ཁག་དྲག་ཤོས་ཅིག་སྦེ་བཟོ་ནི་འདི་ཨིནམ་ད་ དེའི་དམིགས་གཏད་འདི་ཡང་ སྣ་མང་དཔལ་འབྱོར་གྱི་ལས་སྣ་དང་རྫོང་ཁག་གི་མི་ཚུ་གི་དོན་ལུ་ འོས་མཐུན་གྱི་གནས་སྟངས་བཟོ་སྦེ་བྱིན་ནི་འདི་ཨིན།<br>
+རྒྱལ་ཁབ་ནང་བཟོ་རིག་གཙུག་ལག་ཤེས་ཡོན་སྦྱང་ནིའི་དོན་ལུ་ སྤྱི་ལོ་ ༢༠༠༡ ལུ་གཞི་བཙུགས་འབད་མི་ ཚན་རིག་དང་འཕྲུལ་རིག་མཐོ་རིམ་སློབ་གྲྭ་འདི་ཡང་རྫོང་ཁག་འདི་ནང་ཡོདཔ་མ་ཚད་ རྒྱལ་འཛིན་གཙུག་ལག་སློབ་སྡེ་འོག་ལུ་ཚོང་འབྲེལ་དང་འཛིན་སྐྱོང་གི་ཤེས་ཡོན་ཚུ་ལྷབ་སྦྱང་འབད་སའི་གཞུང་གི་རང་སྐྱོང་མཐོ་རིམ་སློབ་གྲྭ་ཅིག་ཨིན་མི་ དགེ་འདུ་ཚོང་རིག་མཐོ་རིམ་སློབ་གྲྭ་འདི་ཡང་ རྫོང་ཁག་འདི་ནང་ཡོདཔ་ཨིན།<br>
+ཆུ་ཁ་རྫོང་ཁག་ནང་ ཁ་སྐད་གཙོ་བོ་ བྱང་ཕྱོགས་ལུ་སྡོད་མི་ཚུ་གིས་རྫོང་ཁ་སླབ་དོ་ཡོདཔ་ད་ ལྷོ་ཕྱོགས་ཀྱི་མི་ཚུ་གིས་ ལྷོ་མཚམས་པ་ དེ་བཟུམ་སྦེ་ བསམ་རྩེ་རྫོང་ཁག་གི་ས་མཚམས་བདའ་སྟེ་ ལྷོཔ་གི་ཁ་སྐད་སླབ་མི་ཡང་ཡོདཔ་ཨིན།</big> 
+
+=== ཧཱ་རྫོང་ཁག། ===
+<big>༉ ཧཱ་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཁལ་གཅིག་གི་གྲས་ལས་ ནུབ་ཕྱོགས་ལུང་ཕྱོགས་ཀྱི་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ འབྲུག་ནུབ་ཕྱོགས་ཀྱི་ས་མཚམས་ཁར་ ས་གཞི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༨༩༩.༢༠ དང་རྒྱ་མཚོའི་མཐའ་མ་ལས་ མི་ཊར་ ༡༠༠༠-༥༦༠༠ གི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། ཧཱ་རྫོང་ཁག་ནང་ཁྱིམ་གུང་པ་ ༢༩༥༢ ཡོདཔ་ད་ སྤྱི་ལོ་ ༢༠༡༧ ལོའི་ མི་རྩིས་དང་འཁྲིལཝ་ད་ རྫོང་ཁག་འདི་ནང་ མི་རློབས་ ༡༣༦༥༥ དེ་ཅིག་ཡོདཔ་སྦེ་ བཀོད་དེ་འདུག། <br>
+ཧཱ་རྫོང་ཁག་འདི་ མགར་ས་རྫོང་ཁག་གི་ཤུལ་ལས་ར་ འབྲུག་རྒྱལ་ཁབ་ནང་ མི་རློབས་ཉུང་ཤོས་ཡོད་པའི་རྫོང་ཁག་ཅིག་ཨིན། <br>
+རྫོང་ཁག་འདི་ནང་ཁྱབ་ཆེ་བའི་ཁ་སྐད་འདི་ཡང་ ང་བཅས་རའི་རྒྱལ་ཡོངས་སྐད་ཡིག་ རྫོང་ཁ་འདི་ར་ཨིན་མས། ཧཱ་རྫོངཁག་ནང་ དྲུང་ཁག་གཅིག་དང་རྒེད་འོག་དྲུག་ སྤྱི་འོག་སུམ་ཅུ་དང་གཡུས་ཚན་ ༩༦ ཡོདཔ་ཨིན། ཧཱ་རྫོང་ཁག་ནང་ ལོ་ཐོག་གཙོ་བོ་ ཀར་ ནག་ བྱཱོ་དང་ ས་ཁ་དམའ་ས་ལས་ཕར་ བྱཱ་ཡང་འཚོ་དོ་ཡོདཔ་ཨིན། མི་སེར་ཚུ་གིས་ ཀེ་བ་དང་ཨེ་མ་ ཨེ་པཱལ་དང་གཞན་དངུལ་ཐོག་ཚུ་ཡང་འཛུག་སྐྱོང་འཐབ་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ནང་ཡོད་པའི་མི་སེར་མང་ཤོས་ཅིག་གིས་ གཡག་དང་ནོར་ བྱམོ་དང་ཕགཔ་ རྟ་ལ་སོགས་པའི་སྒོ་ནོར་གསོ་སྐྱོང་གི་ལཱ་ཚུ་ཡང་འབད་དོ་ཡོདཔ་ཨིན་མས། ཧཱ་རྫོང་ཁག་གི་ས་གཞི་བརྒྱ་ཆ་ ༧༨ དེ་ཅིག་ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ འདི་གིས་ མི་སྡེ་ནང་དཔལ་འབྱོར་གནས་སྟངས་ཀྱི་ནང་ལུ་ ཕན་སྦོམ་སྦེ་ར་ཐོགསཔ་ཨིན་མས། སྤྱི་ལོ་ ༢༠༠༢ ལས་ར་ རྫོང་ཁག་འདི་ནང་ ལྟ་བཤལ་གྱི་སྒོ་འདི་ཕྱེ་ཡོད་རུང་ སྤ་རོ་ ཐིམ་ཕུག་དང་བུམ་ཐང་བཟུམ་ཅིག་ར་འདི་ཡར་རྒྱས་འགྱོ་མ་ཚུགས་པས། རྫོང་ཁག་འདི་ནང་ཡོད་པའི་ མེ་རི་སྤུན་གསུམ་གྱི་ཉེ་འདབས་ལུ་ རྩ་ཆེ་བའི་ ལྷ་ཁང་དཀརཔོ་དང་གནགཔོ་གཉིས་ཡོདཔ་མ་ཚད་ ལྷ་ཁང་འདི་ ཧེ་མ་དུས་རབས་ ༧ པ་ལས་ར་བཞེངས་ཡོད་པའི་ལོ་རྒྱུས་འདུག། ལུང་གཤོང་འདི་གི་ལྟག་ལུ་ར་ ཧཱ་དགོན་པ་ཟེར་མི་ལྷ་ཅིག་ཡང་ཡོདཔ་ཨིན། ལྷ་ཁང་འདི་ ལོ་ཨ་རྟག་ར་ རང་ཟླ་ ༡༡ པའི་ཚེས་ ༡༠ ལུ་ སངས་རྒྱས་འོག་དཔག་མེད་ལུ་མཆོད་པ་ཚུ་ཕུལ་སྲོལ་ཡོདཔ་ཨིན།<br>
+དོ་རུང་ ལྷ་ཁང་དཀརཔོ་དང་གནགཔོ་གི་ཉེ་འདབས་ལུ་ མཆོད་རྟེན་ཅིག་ཡོད་མི་དེའི་སྦོ་ལོ་ཁར་ཡོད་པའི་རྡོ་སྦོམ་ཅིག་གུར་ གུ་རུ་རིན་པོ་ཆེ་གི་དབུ་ཞྭ་དང་སྐུ་རྗེས་ཚུ་ཡང་མཇལ་ནི་འདུག།</big> 
+
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
+# Wikipedia Contributors. (2021). Mongar District. In Wikipedia. The Free Encyclopedia. Retrieved from  https://en.wikipedia.org/w/index.php?title=Mongar_District&oldid=1036483996
+# Wikipedia contributors. (2021). Samtse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Samtse_District&oldid=1059818481
+# Wikipedia contributors. (2021). Sarpang District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Sarpang_District&oldid=1053149274
+# Wikipedia contributors. (2021). Trongsa District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trongsa_District&oldid=1053335734
+# Wikipedia contributors. (2021). Zhemgang. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Zhemgang&oldid=1012781228
+# Wikipedia contributors. (2021). Chukha District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Chukha_District&oldid=1053307238
+# Wikipedia contributors. (2021). Haa district. In Wikipedia, The Free Encyclopedia. Retrieved from  https://nl.wikipedia.org/w/index.php?title=Haa_(district)&oldid=49239570.
